--- a/style.css
+++ b/style.css
@@ -1,3 +1,18 @@
+.todo-title {
+    font-size:40px;
+    display:flex;
+    justify-content:center;
+    padding:40px 10px 10px 10px;
+    font-family: 'Ubuntu Mono', monospace;
+    color:white;
+}
+
+.content {
+    background-color:rgba(7, 160, 255, 0.566);
+    padding-bottom:100px;
+    width:60%;
+}
+
 .done {
     text-decoration: line-through;
     color:red;
@@ -5,8 +20,24 @@
 
 li {
     list-style:none;
+    padding:3px 3px 3px 7px;
+    margin-left:135px;
+    color:rgba(14, 25, 35, 0.621);
+    background-color:white;
+    width:60%;
+    margin-bottom:30px;
 }
 
 button {
     margin-left:10px;
+    height:36px;
+    border:none;
+    cursor:pointer;
+}
+
+input {
+    margin:50px 0 30px 200px;
+    width:50%;
+    height:35px;
+    border:none;
 }
