--- a/style.css
+++ b/style.css
@@ -41,3 +41,8 @@ input {
     height:35px;
     border:none;
 }
+
+::placeholder {
+    color: rgba(128, 128, 128, 0.616);
+    font-size: 14px;
+  }
